Plated Diamond finish

--- a/src/main/resources/assets/awesomearmaments/lang/en_us.json
+++ b/src/main/resources/assets/awesomearmaments/lang/en_us.json
@@ -2,5 +2,9 @@
   "item.awesomearmaments.plated_iron_helmet": "Plated Iron Helmet",
   "item.awesomearmaments.plated_iron_chestplate": "Plated Iron Chestplate",
   "item.awesomearmaments.plated_iron_leggings": "Plated Iron Leggings",
-  "item.awesomearmaments.plated_iron_boots": "Plated Iron Boots"
+  "item.awesomearmaments.plated_iron_boots": "Plated Iron Boots",
+  "item.awesomearmaments.plated_diamond_helmet": "Plated Diamond Helmet",
+  "item.awesomearmaments.plated_diamond_chestplate": "Plated Diamond Chestplate",
+  "item.awesomearmaments.plated_diamond_leggings": "Plated Diamond Leggings",
+  "item.awesomearmaments.plated_diamond_boots": "Plated Diamond Boots"
 }
