added plated netherite

--- a/src/main/resources/assets/awesomearmaments/lang/en_us.json
+++ b/src/main/resources/assets/awesomearmaments/lang/en_us.json
@@ -6,5 +6,13 @@
   "item.awesomearmaments.plated_diamond_helmet": "Plated Diamond Helmet",
   "item.awesomearmaments.plated_diamond_chestplate": "Plated Diamond Chestplate",
   "item.awesomearmaments.plated_diamond_leggings": "Plated Diamond Leggings",
-  "item.awesomearmaments.plated_diamond_boots": "Plated Diamond Boots"
+  "item.awesomearmaments.plated_diamond_boots": "Plated Diamond Boots",
+  "item.awesomearmaments.plated_netherite_helmet": "Plated Netherite Helmet",
+  "item.awesomearmaments.plated_netherite_chestplate": "Plated Netherite Chestplate",
+  "item.awesomearmaments.plated_netherite_leggings": "Plated Netherite Leggings",
+  "item.awesomearmaments.plated_netherite_boots": "Plated Netherite Boots",
+  "item.awesomearmaments.bulwark_helmet": "Bulwark Helmet",
+  "item.awesomearmaments.bulwark_chestplate": "Bulwark Chestplate",
+  "item.awesomearmaments.bulwark_leggings": "Bulwark Leggings",
+  "item.awesomearmaments.bulwark_boots": "Bulwark Boots"
 }
