beserk diamond & netherite

--- a/src/main/resources/assets/awesomearmaments/lang/en_us.json
+++ b/src/main/resources/assets/awesomearmaments/lang/en_us.json
@@ -51,6 +51,8 @@
   "item.awesomearmaments.wise_iron_upgrade": "Wise Iron Upgrade",
   "item.awesomearmaments.wise_diamond_upgrade": "Wise Diamond Upgrade",
   "item.awesomearmaments.wise_netherite_upgrade": "Wise Netherite Upgrade",
+  "item.awesomearmaments.beserk_diamond_upgrade": "Beserk Diamond Upgrade",
+  "item.awesomearmaments.beserk_netherite_upgrade": "Beserk Netherite Upgrade",
 
   "item.awesomearmaments.aqua_diamond_upgrade": "Aqua Diamond Upgrade",
   "item.awesomearmaments.aqua_netherite_upgrade": "Aqua Netherite Upgrade",
