--- a/src/main/resources/assets/awesomearmaments/lang/en_us.json
+++ b/src/main/resources/assets/awesomearmaments/lang/en_us.json
@@ -43,6 +43,16 @@
   "item.awesomearmaments.bulwark_chestplate": "Bulwark Chestplate",
   "item.awesomearmaments.bulwark_leggings": "Bulwark Leggings",
   "item.awesomearmaments.bulwark_boots": "Bulwark Boots",
+
+  "item.awesomearmaments.beserk_diamond_helmet": "Beserk Diamond Helmet",
+  "item.awesomearmaments.beserk_diamond_chestplate": "Beserk Diamond Chestplate",
+  "item.awesomearmaments.beserk_diamond_leggings": "Beserk Diamond Leggings",
+  "item.awesomearmaments.beserk_diamond_boots": "Beserk Diamond Boots",
+
+  "item.awesomearmaments.beserk_netherite_helmet": "Beserk Netherite Helmet",
+  "item.awesomearmaments.beserk_netherite_chestplate": "Beserk Netherite Chestplate",
+  "item.awesomearmaments.beserk_netherite_leggings": "Beserk Netherite Leggings",
+  "item.awesomearmaments.beserk_netherite_boots": "Beserk Netherite Boots",
   
   "item.awesomearmaments.plated_iron_upgrade": "Plated Iron Upgrade",
   "item.awesomearmaments.plated_diamond_upgrade": "Plated Diamond Upgrade",
@@ -51,6 +61,7 @@
   "item.awesomearmaments.wise_iron_upgrade": "Wise Iron Upgrade",
   "item.awesomearmaments.wise_diamond_upgrade": "Wise Diamond Upgrade",
   "item.awesomearmaments.wise_netherite_upgrade": "Wise Netherite Upgrade",
+
   "item.awesomearmaments.beserk_diamond_upgrade": "Beserk Diamond Upgrade",
   "item.awesomearmaments.beserk_netherite_upgrade": "Beserk Netherite Upgrade",
 
