fixed spelling mistakes

--- a/src/main/resources/assets/awesomearmaments/lang/en_us.json
+++ b/src/main/resources/assets/awesomearmaments/lang/en_us.json
@@ -44,15 +44,15 @@
   "item.awesomearmaments.bulwark_leggings": "Bulwark Leggings",
   "item.awesomearmaments.bulwark_boots": "Bulwark Boots",
 
-  "item.awesomearmaments.beserk_diamond_helmet": "Beserk Diamond Helmet",
-  "item.awesomearmaments.beserk_diamond_chestplate": "Beserk Diamond Chestplate",
-  "item.awesomearmaments.beserk_diamond_leggings": "Beserk Diamond Leggings",
-  "item.awesomearmaments.beserk_diamond_boots": "Beserk Diamond Boots",
+  "item.awesomearmaments.berserk_diamond_helmet": "Berserk Diamond Helmet",
+  "item.awesomearmaments.berserk_diamond_chestplate": "Berserk Diamond Chestplate",
+  "item.awesomearmaments.berserk_diamond_leggings": "Berserk Diamond Leggings",
+  "item.awesomearmaments.berserk_diamond_boots": "Berserk Diamond Boots",
 
-  "item.awesomearmaments.beserk_netherite_helmet": "Beserk Netherite Helmet",
-  "item.awesomearmaments.beserk_netherite_chestplate": "Beserk Netherite Chestplate",
-  "item.awesomearmaments.beserk_netherite_leggings": "Beserk Netherite Leggings",
-  "item.awesomearmaments.beserk_netherite_boots": "Beserk Netherite Boots",
+  "item.awesomearmaments.berserk_netherite_helmet": "Berserk Netherite Helmet",
+  "item.awesomearmaments.berserk_netherite_chestplate": "Berserk Netherite Chestplate",
+  "item.awesomearmaments.berserk_netherite_leggings": "Berserk Netherite Leggings",
+  "item.awesomearmaments.berserk_netherite_boots": "Berserk Netherite Boots",
   
   "item.awesomearmaments.plated_iron_upgrade": "Plated Iron Upgrade",
   "item.awesomearmaments.plated_diamond_upgrade": "Plated Diamond Upgrade",
@@ -62,8 +62,8 @@
   "item.awesomearmaments.wise_diamond_upgrade": "Wise Diamond Upgrade",
   "item.awesomearmaments.wise_netherite_upgrade": "Wise Netherite Upgrade",
 
-  "item.awesomearmaments.beserk_diamond_upgrade": "Beserk Diamond Upgrade",
-  "item.awesomearmaments.beserk_netherite_upgrade": "Beserk Netherite Upgrade",
+  "item.awesomearmaments.berserk_diamond_upgrade": "Berserk Diamond Upgrade",
+  "item.awesomearmaments.berserk_netherite_upgrade": "Berserk Netherite Upgrade",
 
   "item.awesomearmaments.aqua_diamond_upgrade": "Aqua Diamond Upgrade",
   "item.awesomearmaments.aqua_netherite_upgrade": "Aqua Netherite Upgrade",
