--- a/src/main/resources/assets/awesomearmaments/lang/en_us.json
+++ b/src/main/resources/assets/awesomearmaments/lang/en_us.json
@@ -39,10 +39,10 @@
   "item.awesomearmaments.aqua_netherite_leggings": "Aqua Netherite Leggings",
   "item.awesomearmaments.aqua_netherite_boots": "Aqua Netherite Boots",
 
-  "item.awesomearmaments.bulwark_helmet": "§8Bulwark Helmet",
-  "item.awesomearmaments.bulwark_chestplate": "§8Bulwark Chestplate",
-  "item.awesomearmaments.bulwark_leggings": "§8Bulwark Leggings",
-  "item.awesomearmaments.bulwark_boots": "§8Bulwark Boots",
+  "item.awesomearmaments.bulwark_helmet": "§8§lBulwark Helmet",
+  "item.awesomearmaments.bulwark_chestplate": "§8§lBulwark Chestplate",
+  "item.awesomearmaments.bulwark_leggings": "§8§lBulwark Leggings",
+  "item.awesomearmaments.bulwark_boots": "§8§lBulwark Boots",
 
   "item.awesomearmaments.berserk_diamond_helmet": "Berserk Diamond Helmet",
   "item.awesomearmaments.berserk_diamond_chestplate": "Berserk Diamond Chestplate",
@@ -54,15 +54,15 @@
   "item.awesomearmaments.berserk_netherite_leggings": "Berserk Netherite Leggings",
   "item.awesomearmaments.berserk_netherite_boots": "Berserk Netherite Boots",
 
-  "item.awesomearmaments.bloodlust_helmet": "§4Bloodlust Helmet",
-  "item.awesomearmaments.bloodlust_chestplate": "§4Bloodlust Chestplate",
-  "item.awesomearmaments.bloodlust_leggings": "§4Bloodlust Leggings",
-  "item.awesomearmaments.bloodlust_boots": "§4Bloodlust Boots",
+  "item.awesomearmaments.bloodlust_helmet": "§4§lBloodlust Helmet",
+  "item.awesomearmaments.bloodlust_chestplate": "§4§lBloodlust Chestplate",
+  "item.awesomearmaments.bloodlust_leggings": "§4§lBloodlust Leggings",
+  "item.awesomearmaments.bloodlust_boots": "§4§lBloodlust Boots",
 
-  "item.awesomearmaments.neptune_helmet": "§1Neptune Helmet",
-  "item.awesomearmaments.neptune_chestplate": "§1Neptune Chestplate",
-  "item.awesomearmaments.neptune_leggings": "§1Neptune Leggings",
-  "item.awesomearmaments.neptune_boots": "§1Neptune Boots",
+  "item.awesomearmaments.neptune_helmet": "§1§lNeptune Helmet",
+  "item.awesomearmaments.neptune_chestplate": "§1§lNeptune Chestplate",
+  "item.awesomearmaments.neptune_leggings": "§1§lNeptune Leggings",
+  "item.awesomearmaments.neptune_boots": "§1§lNeptune Boots",
 
   "item.awesomearmaments.infinite_sight_helmet": "§lInfinite Sight Helmet",
   "item.awesomearmaments.infinite_sight_chestplate": "§lInfinite Sight Chestplate",
@@ -93,5 +93,6 @@
   "effect.awesomearmaments.experience_empower": "Exp Empower",
   "effect.awesomearmaments.experience_empower2": "Exp Empower 2",
   "effect.awesomearmaments.infinite_sight": "Infinite Sight",
-  "effect.awesomearmaments.bloodlust": "Bloodlust"
+  "effect.awesomearmaments.bloodlust": "Bloodlust",
+  "effect.awesomearmaments.waterborn": "Waterborn"
 }
