added stormcaller sword and basic textures. renamed windcaller/stormcaller. small balance change

--- a/src/main/resources/assets/awesomearmaments/lang/en_us.json
+++ b/src/main/resources/assets/awesomearmaments/lang/en_us.json
@@ -88,7 +88,8 @@
   "item.awesomearmaments.infinite_sight_upgrade": "§lInfinite Sight Upgrade",
   "item.awesomearmaments.bloodlust_upgrade": "§4Bloodlust Upgrade",
 
-  "item.awesomearmaments.windcaller_sword": "Windcaller Blade",
+  "item.awesomearmaments.windcaller_sword": "Windcaller Sword",
+  "item.awesomearmaments.stormcaller_sword": "Stormcaller Sword",
 
   "itemgroup.awesomearmaments": "Awesome Armaments",
 
