added venomous sword and withering sword as well as initial textures

--- a/src/main/resources/assets/awesomearmaments/lang/en_us.json
+++ b/src/main/resources/assets/awesomearmaments/lang/en_us.json
@@ -90,6 +90,8 @@
 
   "item.awesomearmaments.windcaller_sword": "Windcaller Sword",
   "item.awesomearmaments.stormcaller_sword": "Stormcaller Sword",
+  "item.awesomearmaments.venomous_sword": "Venomous Sword",
+  "item.awesomearmaments.withering_sword": "Withering Sword",
 
   "itemgroup.awesomearmaments": "Awesome Armaments",
 
