added elder guardian scales tiem

--- a/src/main/resources/assets/awesomearmaments/lang/en_us.json
+++ b/src/main/resources/assets/awesomearmaments/lang/en_us.json
@@ -104,6 +104,9 @@
   "item.awesomearmaments.withering_sword": "Withering Sword",
   "item.awesomearmaments.withering_axe": "Withering Axe",
 
+
+  "item.awesomearmaments.elder_guardian_scales": "Elder Guardian Scales",
+
   "itemgroup.awesomearmaments": "Awesome Armaments",
 
   "effect.awesomearmaments.experience_empower": "Exp Empower",
