added loot table for elder guardian scale

--- a/src/main/resources/assets/awesomearmaments/lang/en_us.json
+++ b/src/main/resources/assets/awesomearmaments/lang/en_us.json
@@ -105,7 +105,7 @@
   "item.awesomearmaments.withering_axe": "Withering Axe",
 
 
-  "item.awesomearmaments.elder_guardian_scales": "Elder Guardian Scales",
+  "item.awesomearmaments.elder_guardian_scale": "Elder Guardian Scale",
 
   "itemgroup.awesomearmaments": "Awesome Armaments",
 
